home page header menu and style css

--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -1,5 +1,5 @@
 .header {
-	height: 210px;
+	height: 216px;
 	padding: 0 10% 0 10%;
 
 	.edit-panel {
@@ -18,11 +18,8 @@
 	}
 
 	.menus {
-		height: 40px;
+		height: 46px;
 		width: 100%;
-		display: flex;
-		justify-content: flex-end;
-		align-items: center;
 
 		.menu-component {
 			position: absolute;
@@ -40,9 +37,13 @@
 				.menu-indicator {
 					font-size: 24px;
 				}
-				.ant-menu-horizontal, .ant-menu-item::after, .ant-menu-submenu::after {
+
+				.ant-menu-horizontal,
+				.ant-menu-item::after,
+				.ant-menu-submenu::after {
 					border: none !important;
 				}
+
 				.ant-menu {
 					color: rgba(0, 0, 0, 0.88);
 					background: #ffffff00;
@@ -53,7 +54,7 @@
 				.auth-login {
 					font-weight: 500;
 					border: 1px solid white;
-					padding: 0 5px;
+					padding: 1px 7px;
 					border-radius: 3px;
 				}
 
@@ -140,7 +141,7 @@
 	.name-site {
 		top: 0;
 		width: 100%;
-		height: calc(100% - 40px);
+		height: 170px;
 		position: relative;
 		display: flex;
 		letter-spacing: normal;
