home page menu group test

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -1,3 +1,7 @@
+body {
+    min-width: auto;
+}
+
 .wrapper-home-page {
 	min-height: 100vh;
 	display: grid;
@@ -153,7 +157,7 @@
 
 							.menu-item {
 								border-bottom: var(--divider-color) 1px solid;
-								width: 300px;
+								width: 100%;
 								display: flex;
 								justify-content: center;
 								box-sizing: border-box;
