--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -13,14 +13,16 @@
 		min-height: 190px;
 		margin: 40px 0;
 		display: flex;
+		flex-wrap: wrap;
+		align-items: flex-start;
 
 		.logo-block {
-			min-width: 170px;
+			width: 165px;
 
 			.uriit-logo {
 				height: 40px;
 				display: flex;
-				margin: 0 50px;
+				justify-content: flex-start;
 			}
 
 			.edit-logo {
@@ -53,7 +55,7 @@
 		}
 
 		.block-info {
-			width: calc(100% - 150px);
+			width: calc(100% - 165px);
 
 			.footer-content-edit {
 				background-color: #fff;
@@ -90,23 +92,26 @@
 
 			.address-content {
 				display: flex;
+				flex-wrap: wrap;
+				align-items: flex-start;
 
 				.phone {
-					padding: 0 10px 0 0;
+					padding: 0;
 
 					.phone-item {
 						display: flex;
 						width: 100%;
 						justify-content: space-between;
+						flex-wrap: wrap;
 						align-items: center;
 
 						.name {
-							padding: 0 10px 0 0;
+							margin: 0 50px 0 0;
 						}
 
 						.value {
 							padding: 0 5px 0 0;
-							text-align: right;
+							float: right;
 						}
 					}
 				}
@@ -128,8 +133,7 @@
 			}
 
 			.address {
-				width: 33.33333333%;
-				padding: 0 10px 0 0;
+				margin: 0 50px 0 0;
 			}
 
 			.service {
