--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -52,10 +52,8 @@
 				}
 
 				.auth-login {
-					font-weight: 500;
-					border: 1px solid white;
-					padding: 1px 7px;
-					border-radius: 3px;
+					padding: 0 12px;
+					font-size: 17px;
 				}
 
 				.ant-menu-submenu-title {
