--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -64,6 +64,7 @@ body {
 			height: calc(100%);
 			padding: 24px 0 0 0;
 			background: #e9e9e91a;
+			min-width: 410px;
 
 			.search-block {
 				max-width: 500px;
