--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -91,9 +91,9 @@
 			}
 
 			.address-content {
-				display: flex;
-				flex-wrap: wrap;
-				align-items: flex-start;
+				display: grid;
+				grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+				gap: 10px 20px;
 
 				.phone {
 					padding: 0;
@@ -104,15 +104,6 @@
 						justify-content: space-between;
 						flex-wrap: wrap;
 						align-items: center;
-
-						.name {
-							margin: 0 50px 0 0;
-						}
-
-						.value {
-							padding: 0 5px 0 0;
-							float: right;
-						}
 					}
 				}
 			}
@@ -133,7 +124,7 @@
 			}
 
 			.address {
-				margin: 0 50px 0 0;
+				margin: 0;
 			}
 
 			.service {
