--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -52,6 +52,11 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+
+			>span {
+				padding: 0 5px;
+				line-height: 1.2;
+			}
 		}
 
 		.block-info {
