--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -52,8 +52,12 @@
 				}
 
 				.auth-login {
-					padding: 0 12px;
-					font-size: 17px;
+					vertical-align: middle;
+				
+					> svg.icon {
+						color: inherit;
+						font-size: 24px;
+					}
 				}
 
 				.ant-menu-submenu-title {
