--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -170,6 +170,7 @@ body {
 									box-sizing: border-box;
 									margin: 5px 0;
 									border-radius: 3px;
+									min-width: 72px;
 
 									.menu-item-content {
 										overflow: hidden;
