style panel search alert

--- a/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
@@ -32,6 +32,7 @@
                 cursor: auto;
                 background-color: #eae9e9;
             }
+
         }
 
         .loading {
@@ -42,6 +43,15 @@
 
         .ant-descriptions.ant-descriptions-bordered>.ant-descriptions-view {
             border: none;
+        }
+
+        .alert-desc {
+            background: none;
+            border: none;
+            display: flex;
+            align-items: flex-end;
+            border-radius: 0px;
+            padding: 0;
         }
     }
 }
