change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -1,5 +1,5 @@
 .header {
-	height: 216px;
+	height: 225px;
 	padding: 0 10% 0 10%;
 
 	.edit-panel {
@@ -143,7 +143,6 @@
 	.name-site {
 		top: 0;
 		width: 100%;
-		height: 170px;
 		position: relative;
 		display: flex;
 		letter-spacing: normal;
@@ -173,6 +172,7 @@
 
 		h1:first-child {
 			margin: 0;
+			line-height: 1.2;
 		}
 
 		h5 {
@@ -182,6 +182,7 @@
 
 		.title {
 			width: 100%;
+			height: 155px;
 			color: #fff;
 			display: flex;
 			flex-direction: column;
