--- a/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
@@ -33,6 +33,8 @@
             }
 
             .loading {
+                display: flex;
+                justify-content: center;
                 margin-top: 20px;
                 color: #076dbf;
                 text-align: center;
