--- a/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
+++ b/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
@@ -1,18 +1,68 @@
 .ngw-breabcrumb-panel {
     display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: large;
 
-    .title-item {
+    .icon-home {
+        border-radius: 3px;
+        font-size: 14px;
+        width: 24px;
+        height: 14px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .item-bc {
         display: flex;
         align-items: center;
+        border-radius: 6px;
+        border: 1px solid transparent;
 
-        .title {
-            padding: 0 0 0 4px;
-            color: var(--primary);
-            font-family: var(--ngw-head-font-family-list);
+        .title-bc {
+            font-size: 16px;
+        }
+
+        button {
+            padding: 0;
+
+            a {
+                padding: 0 5px 0 0;
+            }
+        }
+        a {
+            padding: 0 5px 0 0;
+        }
+        .ant-btn {
+            gap: 0;
+        }
+
+        .icon-menu {
+            border-radius: 3px;
+            font-size: 14px;
+            width: 24px;
+            height: 14px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+
+            &:hover {
+                background-color: #00000005;
+            }
+        }
+
+        .icon-separator {
+            color: var(--icon-color);
+            font-size: 14px;
+            width: 24px;
+            height: 14px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
         }
     }
-}
-.dropdown-items{
-    max-height: 350px;
 }
