--- a/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
+++ b/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
@@ -3,6 +3,7 @@
     justify-content: flex-start;
     align-items: center;
     font-size: large;
+    flex-wrap: wrap;
 
     .icon-home {
         border-radius: 3px;
@@ -23,6 +24,11 @@
 
         .title-bc {
             font-size: 16px;
+            max-width: 150px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            padding: 0 4px;
         }
 
         button {
@@ -32,9 +38,11 @@
                 padding: 0 5px 0 0;
             }
         }
+
         a {
             padding: 0 5px 0 0;
         }
+
         .ant-btn {
             gap: 0;
         }
@@ -65,4 +73,12 @@
             align-items: center;
         }
     }
+}
+
+.menu-link-resource {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    overflow-wrap: anywhere;
 }
