--- a/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
+++ b/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
@@ -1,77 +1,40 @@
 .ngw-breabcrumb-panel {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: large;
-    flex-wrap: wrap;
+    line-height: 1.86;
 
-    .icon-home {
-        border-radius: 3px;
-        font-size: 14px;
-        width: 24px;
-        height: 14px;
-        display: flex;
-        justify-items: center;
-        justify-content: center;
-        align-items: center;
+
+    .ant-space-compact-block {
+        display: inline;
     }
 
     .item-bc {
-        display: flex;
-        align-items: center;
-        border-radius: 6px;
-        border: 1px solid transparent;
-
-        .title-bc {
-            font-size: 16px;
-            max-width: 150px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            padding: 0 4px;
-        }
-
-        button {
-            padding: 0;
-
-            a {
-                padding: 0 5px 0 0;
-            }
-        }
-
-        a {
-            padding: 0 5px 0 0;
-        }
-
-        .ant-btn {
-            gap: 0;
-        }
-
-        .icon-menu {
+        .menu-dropdown {
+            padding: 0 3px;
+            margin: 0 0 0 5px;
+            color: var(--primary);
+            cursor: pointer;
             border-radius: 3px;
-            font-size: 14px;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
 
             &:hover {
                 background-color: #00000005;
             }
         }
+    }
 
-        .icon-separator {
-            color: var(--icon-color);
-            font-size: 14px;
-            width: 24px;
-            height: 14px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-        }
+    .icon-title {
+        padding: 0 5px 0 0;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .separator:before {
+        content: "●";
+        font-size: 6px;
+        margin: 0 10px 0 7px;
+        opacity: 0.5;
+        vertical-align: 30%;
+        color: var(--icon-color);
     }
 }
 
@@ -81,4 +44,14 @@
     display: -webkit-box;
     overflow: hidden;
     overflow-wrap: anywhere;
+}
+
+.icon-menu {
+    border-radius: 3px;
+    font-size: 14px !important;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 12px 0px 0px !important;
 }
