--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -54,6 +54,10 @@
 					}
 				}
 
+				.ant-menu-title-content{
+					font-weight: 500;
+				}
+
 				.ant-menu-submenu-title {
 					text-transform: uppercase;
 					color: rgba(255, 255, 255, 0.88);
@@ -82,7 +86,6 @@
 
 			a {
 				color: #ffffff;
-				font-weight: 500;
 			}
 
 			.res-link {
