desc component popup size fix

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -359,14 +359,14 @@
 		flex-direction: column;
 	}
 
-	/* @ckeditor/ckeditor5-image/theme/image.css */
-	.ck-content .image img {
-		display: block;
-		margin: 0 auto;
-		max-width: auto;
-		min-width: auto;
-		height: auto;
-	}
+	// /* @ckeditor/ckeditor5-image/theme/image.css */
+	// .ck-content .image img {
+	// 	display: block;
+	// 	margin: 0 auto;
+	// 	max-width: auto;
+	// 	min-width: auto;
+	// 	height: auto;
+	// }
 
 	/* @ckeditor/ckeditor5-image/theme/image.css */
 	.ck-content .image-inline {
