--- a/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
+++ b/nextgisweb/pyramid/nodepkg/breadcrumb/BreadcrumbComponent.less
@@ -2,6 +2,7 @@
     line-height: 1.86;
 
 
+
     .ant-space-compact-block {
         display: inline;
     }
@@ -54,4 +55,9 @@
     justify-content: center;
     align-items: center;
     margin: 0 12px 0px 0px !important;
+}
+
+.ant-dropdown-menu-custom {
+    max-height: 50%;
+    overflow: auto;
 }
