style component edit layer for layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -82,7 +82,8 @@
     }
 }
 
-:where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-node-content-wrapper:hover, :where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-checkbox+span:hover {
+:where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-node-content-wrapper:hover,
+:where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-checkbox+span:hover {
     background-color: #ffffff00;
 }
 
@@ -110,6 +111,18 @@
 .legend {
     font-size: 18px;
     color: #106a90;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+}
+
+.edit-icon {
+    font-size: 18px;
+    color: var(--danger);
     width: 24px;
     height: 24px;
     display: flex;
