style edit mode layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -49,10 +49,20 @@
                 white-space: nowrap;
                 display: flex;
 
+                .item-title {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                }
+
                 .legend-title {
                     overflow: hidden;
                     text-overflow: ellipsis;
                     white-space: nowrap;
+                }
+
+                .edit-title {
+                    font-weight: 500;
                 }
             }
 
