change description component

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,4 +1,5 @@
 .desc-component {
+
 	.ck-content {
 		overflow: auto;
 		margin: 5px;
@@ -359,14 +360,11 @@
 		flex-direction: column;
 	}
 
-	// /* @ckeditor/ckeditor5-image/theme/image.css */
-	// .ck-content .image img {
-	// 	display: block;
-	// 	margin: 0 auto;
-	// 	max-width: auto;
-	// 	min-width: auto;
-	// 	height: auto;
-	// }
+	/* @ckeditor/ckeditor5-image/theme/image.css */
+	.ck-content .image img {
+		display: block;
+		height: auto;
+	}
 
 	/* @ckeditor/ckeditor5-image/theme/image.css */
 	.ck-content .image-inline {
