--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -53,6 +53,7 @@
                     display: flex;
                     justify-content: space-between;
                     width: 100%;
+                    flex-wrap: nowrap;
                 }
 
                 .legend-title {
