test header home page use form

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -66,13 +66,13 @@ input {
 
 	.item-edit {
 		display: flex;
-		align-items: center;
 		border-radius: 3px;
-		padding: 0 5px 5px 5px;
-	}
+		margin-bottom: 16px;
+		justify-content: space-between;
 
-	.first-input {
-		margin: 0 5px;
+		.first-item, .last-item {
+			width: 100%;
+		}
 	}
 
 	a {
