--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -7,8 +7,9 @@
 		background: #fff;
 		z-index: 1000;
 		margin-top: 5px;
-		padding-top: 5px;
+		padding: 5px;
 		border-radius: 3px;
+		box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 	}
 
 	.menus {
