test footer home page ...

--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -161,4 +161,8 @@
 	.ant-upload-list-item {
 		background-color: var(--icon-color);
 	}
+
+	.ant-upload-list-picture-circle:hover {
+		background-color: var(--icon-color);
+	}
 }
