--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -66,12 +66,23 @@ input {
 	.item-edit {
 		display: flex;
 		border-radius: 3px;
-		margin-bottom: 16px;
+		margin-bottom: 12px;
 		justify-content: space-between;
+		align-items: center;
 
-		.first-item, .last-item {
+		.first-item,
+		.last-item {
 			width: 100%;
 		}
+	}
+
+	.list-edit {
+		background-color: #e9e9e91a;
+		border-radius: 3px;
+	}
+
+	.col-border {
+		border: 1px solid var(--divider-color);
 	}
 
 	a {
