--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -8,19 +8,25 @@
 	flex-direction: column;
 	line-height: 2;
 
+	.form-footer {
+		padding: 5px;
+	}
+
 	.footer-info-edit {
 		margin: 5px 0 5px 0;
 		background-color: #fff;
 		border-radius: 3px;
-	}
-
-	.footer-info-edit {
 		right: 10%;
 		display: flex;
-		text-transform: uppercase;
 		align-items: center;
 		border-radius: 4px;
 		justify-content: flex-end;
+
+		.ant-input-outlined {
+			box-shadow: inset 0 1px 2px 0px var(--divider-color);
+		}
+
+		font-weight: normal;
 	}
 
 	.footer-content-edit {
@@ -30,27 +36,14 @@
 
 	.edit-logo {
 		display: block;
-		border-radius: 3px;
 		color: var(--text-base);
-
 
 		.upload-block {
 			display: flex;
 			justify-content: space-between;
-			padding: 0 5px 5px 5px;
-		}
 
-		.logo-icon-view {
-			margin: 0px 5px;
-			padding: 5px;
-			background: var(--icon-color);
-			border-radius: 3px;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-
-			.uriit-logo-mini {
-				height: 32px;
+			.upload-button {
+				margin-bottom: 5px;
 			}
 		}
 	}
@@ -59,24 +52,6 @@
 		display: flex;
 		justify-content: center;
 		padding: 5px 5px 32px 0;
-	}
-
-	.logo-col-edit {
-		display: flex;
-		justify-content: center;
-		padding-top: 5px;
-	}
-
-	.color-block {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin: 5px 0px 0px 5px;
-
-		>span {
-			padding: 0 5px;
-			line-height: 1.2;
-		}
 	}
 
 	.uriit-logo {
@@ -136,12 +111,6 @@
 					}
 				}
 			}
-
-
-
-			.logo-uriit {
-				font-size: 64px;
-			}
 		}
 	}
 
@@ -158,11 +127,11 @@
 		margin: 0px 0 5px 0;
 	}
 
-	.ant-upload-list-item {
+	.custom-image {
+		height: 40px;
+		padding: 3px;
+		display: flex;
 		background-color: var(--icon-color);
-	}
-
-	.ant-upload-list-picture-circle:hover {
-		background-color: var(--icon-color);
+		border-radius: 3px;
 	}
 }
