--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -10,6 +10,10 @@
 		padding: 5px;
 		border-radius: 3px;
 		box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+
+		.ant-input-outlined {
+			box-shadow: inset 0 1px 2px 0px var(--divider-color);
+		}
 	}
 
 	.menus {
