--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -8,6 +8,8 @@
 	flex-direction: column;
 	line-height: 2;
 
+
+
 	.form-footer {
 		padding: 5px;
 	}
@@ -21,12 +23,8 @@
 		align-items: center;
 		border-radius: 4px;
 		justify-content: flex-end;
-
-		.ant-input-outlined {
-			box-shadow: inset 0 1px 2px 0px var(--divider-color);
-		}
-
 		font-weight: normal;
+		box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 	}
 
 	.footer-content-edit {
@@ -38,13 +36,8 @@
 		display: block;
 		color: var(--text-base);
 
-		.upload-block {
-			display: flex;
-			justify-content: space-between;
-
-			.upload-button {
-				margin-bottom: 5px;
-			}
+		.upload-button {
+			margin-bottom: 5px;
 		}
 	}
 
@@ -52,6 +45,26 @@
 		display: flex;
 		justify-content: center;
 		padding: 5px 5px 32px 0;
+	}
+
+	.ant-upload-list-item-actions {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		button {
+			width: 32px !important;
+			height: 32px !important;
+			color: rgba(0, 0, 0, 0.88);
+			box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02);
+			border-color: #d9d9d9;
+
+			&:hover {
+				color: var(--primary) !important;
+				border-color: var(--primary) !important;
+				background-color: transparent !important;
+			}
+		}
 	}
 
 	.uriit-logo {
@@ -127,11 +140,15 @@
 		margin: 0px 0 5px 0;
 	}
 
-	.custom-image {
-		height: 40px;
-		padding: 3px;
+	.upload-item {
 		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.custom-image {
 		background-color: var(--icon-color);
+		height: 40px;
 		border-radius: 3px;
 	}
 }
