load svg footer home page

--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -44,7 +44,6 @@
 	.logo-col {
 		display: flex;
 		justify-content: center;
-		padding: 5px 5px 32px 0;
 	}
 
 	.ant-upload-list-item-actions {
@@ -68,9 +67,10 @@
 	}
 
 	.uriit-logo {
-		height: 128px;
+		height: 40px;
 		display: flex;
 		justify-content: flex-start;
+		margin: 9px 9px 35px 9px;
 	}
 
 	.name-center {
