--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -139,15 +139,28 @@
 		margin: 0px 0 5px 0;
 	}
 
+	.info-file {
+		padding: 6px;
+		font-size: 18px;
+		color: var(--icon-color);
+	}
+
 	.upload-item {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		flex-wrap: wrap;
+		flex-direction: row-reverse;
+
+		div {
+			display: inline-flex;
+		}
 	}
 
 	.custom-image {
 		background-color: var(--icon-color);
-		height: 40px;
+		height: 24px;
+		padding: 3px;
 		border-radius: 3px;
 	}
 }
