--- a/nextgisweb/resource/nodepkg/resource-title/ResourceTitle.less
+++ b/nextgisweb/resource/nodepkg/resource-title/ResourceTitle.less
@@ -1,17 +1,19 @@
-.title-resource {
-    color: var(--primary);
-    flex-grow: 1;
-    font-family: var(--ngw-head-font-family-list);
-    font-size: 16px;
-    font-weight: var(--ngw-head-font-weight);
-    padding: 0 5px 0 5px;
-    overflow: hidden;
-    white-space: initial;
-    text-overflow: ellipsis;
-    line-height: 20.7px;
-    text-align: left;
-    letter-spacing: normal;
-    -webkit-line-clamp: 1;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
+.title-resource-component {
+    .title-resource {
+        color: var(--primary);
+        flex-grow: 1;
+        font-family: var(--ngw-head-font-family-list);
+        font-size: 16px;
+        font-weight: var(--ngw-head-font-weight);
+        padding: 0 5px 0 5px;
+        overflow: hidden;
+        white-space: initial;
+        text-overflow: ellipsis;
+        line-height: 20.7px;
+        text-align: left;
+        letter-spacing: normal;
+        -webkit-line-clamp: 1;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+    }
 }
