--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -6,7 +6,7 @@
 	margin-top: 0;
 	justify-content: space-between;
 	flex-direction: column;
-	line-height: 2;
+	line-height: 2.25;
 
 	.footer-info-edit {
 		margin: 5px 0 5px 0;
@@ -113,7 +113,7 @@
 				gap: 10px 20px;
 
 				.address {
-					padding: 0;
+					padding: 0 16px 0 0;
 				}
 
 				.phone {
@@ -124,6 +124,7 @@
 						width: 100%;
 						justify-content: space-between;
 						align-items: flex-start;
+						border-bottom: 1px dotted rgba(200, 200, 200, 0.25);
 
 						.name {
 							padding: 0 16px 0 0;
