layer and style resource show for menu layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
@@ -10,7 +10,7 @@
 	box-shadow: none;
 
 	.ant-dropdown-menu-item {
-		padding: 5px;
+		padding: 5px 0 5px 5px;
 	}
 
 	.ant-dropdown-menu-item>svg.icon {
@@ -20,6 +20,6 @@
 
 	.ant-dropdown-menu-title-content {
 		flex: auto;
-		margin: 0 5px;
+		margin: 0 0 0 5px;
 	}
 }
