--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -181,3 +181,17 @@
 .legend-list {
     margin: 0 5px 0 5px;
 }
+
+.show-resource {
+    font-size: 14px;
+    color: var(--icon-color);
+    padding: 4px;
+    margin: 4px;
+    border: 1px solid var(--divider-color);
+    border-radius: 3px;
+
+    &:hover {
+        color: var(--text-base);
+        border: 1px solid var(--icon-color);
+    }
+}
