--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -158,22 +158,11 @@
 		color: var(--icon-color);
 	}
 
-	.upload-item {
+	.upload-footer {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		flex-direction: row-reverse;
-
+	
 		div {
 			display: inline-flex;
 		}
-	}
-
-	.custom-image {
-		background-color: var(--icon-color);
-		height: 24px;
-		padding: 3px;
-		border-radius: 3px;
 	}
 }
