test uploda home page

--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -202,9 +202,22 @@
 }
 
 .upload-header {
+	float: left;
+	margin: 0;
 	display: flex;
+}
 
-	div {
-		display: inline-flex;
-	}
+.file-name {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	max-width: 50%;
+}
+
+.file-info {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+
 }
